# neth

./: .env  .gitignore  README.md  index.1400c395.js  index.14bac6f5.js  index.2219c4aa.js  index.2543c963.js  index.256c48b1.js  index.27db6f89.js  index.2a6c1e09.js  index.2c4a0331.js  index.404a63a8.js  index.45fbe699.js  index.4886f1d1.js  index.576eee25.js  index.57e107e7.js  index.5e4802ef.js  index.6164c7d5.js  index.6e7d9f13.js  index.6fe87a7b.js  index.70000d6f.js  index.726a682c.js  index.77d243fc.js  index.7d12187e.js  index.82b62fef.css  index.8b699de4.js  index.975ef6c8.js  index.9a632a47.js  index.af35be0c.js  index.b211b0a9.css  index.b86c247f.js  index.b9da8e0e.js  index.c7b8a025.css  index.cd11ac22.css  index.cff3c499.js  index.d092d666.js  index.d400f184.js  index.d56e56dd.css  index.db462988.js  index.dff99f6f.js  (+17 more)
account-map/: Cargo.toml  build.sh
account-map/src/: lib.rs
builds/2022-06-03/: account-map.wasm  main.wasm
contract/: Cargo.toml  build.sh
contract/src/: lib.rs  owner.rs  parse.rs  sys.rs
neth/: .gitignore  package.json  tsconfig.json  tsconfig.tsbuildinfo
neth/lib/: index.d.ts  index.js  tsconfig.tsbuildinfo
neth/src/: index.js  index.ts
neth/test/: neth.test.js
notes/: aurora-tx.txt  cli.txt  neth-playground.rs
src/: App.js  App.scss  index.html  index.js
src/components/: Main.js  Modal.js  Modal.scss
src/css/: theme.css
src/dep/: neth.js
src/state/: app.js
src/utils/: neth.js  state.js  (+1 more)
test/: contract.test.js  test-utils.d.ts  test-utils.js
utils/: config.d.ts  config.js  near-utils.d.ts  near-utils.js
(+11 files in other folders)
