[package]
name = "eth-near"
edition = "2018"
version = "0.1.0"
authors = ["Illia Polosukhin <ilblackdragon@gmail.com>", "Matt Lockyer <mattdlockyer@gmail.com>"]
license = "Apache2"
description = "Sign message with metamask, have actions executed on NEAR"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
near-sys = "0.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
